--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
+@import '~antd/dist/antd.css';
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.topbar {
+  background-color: powderblue;
+  margin-bottom: 2em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.wrapper {
+  display: grid;
+  grid-gap: 0px;
+  grid-template-columns: repeat(3, minmax(200px, 1fr));
+  column-gap: 0px;
+  margin: 1em;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.movie-image-wrapper {
+  width: 400px;
+  height: 320px;
+  overflow: hidden;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.movie-image {
+  height: 440px;
+  width: 300px;
+  object-fit: fill;
 }
