--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,11 @@
   text-align: center;
 }
 
+.tag {
+  text-align: left;
+  margin: 1em;
+}
+
 .topbar {
   background-color: powderblue;
   margin-bottom: 2em;
